--- a/index.html
+++ b/index.html
@@ -171,10 +171,10 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto gap-3">
           <li class="nav-item">
-            <a class="nav-link" href="#home">Home</a>
+            <a class="nav-link" href="index.html">Home</a>
           </li>
          <li class="nav-item">
-  <a class="nav-link" href="#cart" aria-label="Cart">
+  <a class="nav-link" href="cart.html" aria-label="Cart">
     <i class="bi bi-cart-fill" style="font-size: 1.2rem;"></i>
   </a>
 </li>
@@ -235,13 +235,13 @@
         <div id="productCarousel1" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="assets/Sacora 100 Pearl Satin Sandals1.webp" class="d-block w-100" alt="Sacora 100 Pearl Satin Sandals Image 1">
+              <img src="assets/Sacora 100 Pearl Satin Sandals1_50_11zon.jpg" class="d-block w-100" alt="Sacora 100 Pearl Satin Sandals Image 1">
             </div>
             <div class="carousel-item">
-              <img src="assets/Sacora 100 Pearl Satin Sandals2.webp" class="d-block w-100" alt="Sacora 100 Pearl Satin Sandals Image 2">
+              <img src="assets/Sacora 100 Pearl Satin Sandals2_51_11zon.jpg" class="d-block w-100" alt="Sacora 100 Pearl Satin Sandals Image 2">
             </div>
             <div class="carousel-item">
-              <img src="assets/Sacora 100 Pearl Satin Sandals3.webp" class="d-block w-100" alt="Sacora 100 Pearl Satin Sandals Image 3">
+              <img src="assets/Sacora 100 Pearl Satin Sandals3_52_11zon.jpg" class="d-block w-100" alt="Sacora 100 Pearl Satin Sandals Image 3">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#productCarousel1" data-bs-slide="prev">
@@ -254,7 +254,14 @@
         <div class="card-body text-center">
           <h5 class="card-title">Sacora 100 Pearl Satin Sandals</h5>
           <p class="card-text">₪7,250</p>
-          <button class="btn btn-outline-dark btn-sm">Add to Cart</button>
+   <button class="btn btn-outline-dark btn-sm add-to-cart"class="add-to-cart"
+  data-name="Sacora 100 Pearl Satin Sandals"
+  data-price="7250"
+  data-image="assets/Sacora 100 Pearl Satin Sandals1_50_11zon.jpg"
+  data-id="product1">
+  Add to Cart
+</button>
+
           <button class="btn btn-outline-danger btn-sm"><i class="bi bi-heart"></i></button>
         </div>
       </div>
@@ -266,13 +273,13 @@
         <div id="productCarousel2" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="assets/Chambeliss Derby Shoes in Calf Leather1.webp" class="d-block w-100" alt="Chambeliss Derby Shoes Image 1">
+              <img src="assets/Chambeliss Derby Shoes in Calf Leather1.png" class="d-block w-100" alt="Chambeliss Derby Shoes Image 1">
             </div>
             <div class="carousel-item">
-              <img src="assets/Chambeliss Derby Shoes in Calf Leather2.webp" class="d-block w-100" alt="Chambeliss Derby Shoes Image 2">
+              <img src="assets/Chambeliss Derby Shoes in Calf Leather2.png" class="d-block w-100" alt="Chambeliss Derby Shoes Image 2">
             </div>
             <div class="carousel-item">
-              <img src="assets/Chambeliss Derby Shoes in Calf Leather3.webp" class="d-block w-100" alt="Chambeliss Derby Shoes Image 3">
+              <img src="assets/Chambeliss Derby Shoes in Calf Leather3.png" class="d-block w-100" alt="Chambeliss Derby Shoes Image 3">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#productCarousel2" data-bs-slide="prev">
@@ -297,13 +304,13 @@
         <div id="productCarousel3" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="assets/Exclusive Angelina Ballerina Flats1.webp" class="d-block w-100" alt="Exclusive Angelina Ballerina Flats Image 1">
+              <img src="assets/Exclusive Angelina Ballerina Flats1.png" class="d-block w-100" alt="Exclusive Angelina Ballerina Flats Image 1">
             </div>
             <div class="carousel-item">
-              <img src="assets/Exclusive Angelina Ballerina Flats2.webp" class="d-block w-100" alt="Exclusive Angelina Ballerina Flats Image 2">
+              <img src="assets/Exclusive Angelina Ballerina Flats2.png" class="d-block w-100" alt="Exclusive Angelina Ballerina Flats Image 2">
             </div>
             <div class="carousel-item">
-              <img src="assets/Exclusive Angelina Ballerina Flats3.webp" class="d-block w-100" alt="Exclusive Angelina Ballerina Flats Image 3">
+              <img src="assets/Exclusive Angelina Ballerina Flats3.png" class="d-block w-100" alt="Exclusive Angelina Ballerina Flats Image 3">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#productCarousel3" data-bs-slide="prev">
@@ -328,13 +335,13 @@
         <div id="productCarousel4" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="assets/Check Sneakers in Cotton Canvas1.webp" class="d-block w-100" alt="Check Sneakers in Cotton Canvas Image 1">
+              <img src="assets/Check Sneakers in Cotton Canvas1.png" class="d-block w-100" alt="Check Sneakers in Cotton Canvas Image 1">
             </div>
             <div class="carousel-item">
-              <img src="assets/Check Sneakers in Cotton Canvas2.webp" class="d-block w-100" alt="Check Sneakers in Cotton Canvas Image 2">
+              <img src="assets/Check Sneakers in Cotton Canvas2.png" class="d-block w-100" alt="Check Sneakers in Cotton Canvas Image 2">
             </div>
             <div class="carousel-item">
-              <img src="assets/Check Sneakers in Cotton Canvas3.webp" class="d-block w-100" alt="Check Sneakers in Cotton Canvas Image 3">
+              <img src="assets/Check Sneakers in Cotton Canvas3.png" class="d-block w-100" alt="Check Sneakers in Cotton Canvas Image 3">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#productCarousel4" data-bs-slide="prev">
@@ -429,9 +436,40 @@
   </footer>
 
   <!-- Bootstrap JS Bundle (includes Popper) -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js">
+  document.querySelectorAll(".add-to-cart").forEach(button => {
+    button.addEventListener("click", function () {
+      const name = this.dataset.name;
+      const price = parseFloat(this.dataset.price);
+      const image = this.dataset.image;
+      const id = this.dataset.id;
+
+      let cart = JSON.parse(localStorage.getItem("cart")) || [];
+
+      // Check if the item already exists in the cart
+      const existingItem = cart.find(item => item.id === id);
+      if (existingItem) {
+        existingItem.qty += 1;
+      } else {
+        cart.push({
+          id: id,
+          name: name,
+          price: price,
+          image: image,
+          qty: 1
+        });
+      }
+
+      localStorage.setItem("cart", JSON.stringify(cart));
+      alert("Item added to cart!");
+    });
+  });
+
+</script>
 
 </body>
 </html>
+
+
 
 
